--- a/src/pages/Collection/styles.scss
+++ b/src/pages/Collection/styles.scss
@@ -3,11 +3,7 @@
 .Collection {
   padding: 32px;
   line-height: 1.5;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  flex: 1;
 
   &-button {
     cursor: pointer;
